--- a/src/navigation2d_example/param/base_local_planner_params.yaml
+++ b/src/navigation2d_example/param/base_local_planner_params.yaml
@@ -1,39 +1,27 @@
-TrajectoryPlannerROS:
+TebLocalPlannerROS:
 
-# Robot Configuration Parameters
-  max_vel_x: 0.3
-  min_vel_x: 0.1
+ odom_topic: odom
+ map_frame: /odom
 
-  max_vel_theta:  1.0
-  min_vel_theta: -1.0
-  min_in_place_vel_theta: 0.6
-  
-  acc_lim_x: 0.5
-  acc_lim_theta: 1.0
+ # Trajectory
+ teb_autosize: True
+ dt_ref: 0.2
+ dt_hysteresis: 0.1
+ global_plan_overwrite_orientation: True
+ max_global_plan_lookahead_dist: 3.0
+ feasibility_check_no_poses: 5
 
-# Goal Tolerance Parameters
-  yaw_goal_tolerance: 3.14
-  xy_goal_tolerance: 0.15
+ # Robot
+ max_vel_x: 0.1
+ max_vel_x_backwards: 0.1
+ max_vel_y: 0
+ max_vel_theta: 0.5
+ acc_lim_x: 0.1
+ acc_lim_y: 0.1
+ acc_lim_theta: 0.1
+ footprint_model:
+   type: "polygon"
+   vertices: [[0.2, 0.2], [0.2, -0.2], [-0.2, -0.2], [-0.2, 0.2]]
 
-# Forward Simulation Parameters
-  sim_time: 3.0
-  vx_samples: 6
-  vtheta_samples: 20
-
-# Trajectory Scoring Parameters
-  meter_scoring: true
-  pdist_scale: 0.6
-  gdist_scale: 0.8
-  occdist_scale: 0.01
-  heading_lookahead: 0.325
-  dwa: true
-
-# Oscillation Prevention Parameters
-  oscillation_reset_dist: 0.05
-
-# Differential-drive robot configuration
-  holonomic_robot: false
-  max_vel_y: 0.0
-  min_vel_y: 0.0
-  acc_lim_y: 0.0
-  vy_samples: 0
+ # GoalTolerance
+ xy_goal_tolerance: 0.5
