--- a/src/navigation2d_example/param/car_move_now/base_local_planner_params.yaml
+++ b/src/navigation2d_example/param/car_move_now/base_local_planner_params.yaml
@@ -19,9 +19,21 @@ TebLocalPlannerROS:
  acc_lim_x: 0.1
  acc_lim_y: 0.1
  acc_lim_theta: 0.1
+ min_turning_radius: 0.5
  footprint_model:
    type: "polygon"
    vertices: [[0.2, 0.2], [0.2, -0.2], [-0.2, -0.2], [-0.2, 0.2]]
 
  # GoalTolerance
  xy_goal_tolerance: 0.5
+ free_goal_vel: false
+
+ # Obstacles
+
+ min_obstacle_dist: 0.5
+ include_costmap_obstacles: True
+ costmap_obstacles_behind_robot_dist: 1.0
+ obstacle_poses_affected: 30
+ costmap_converter_plugin: ""
+ costmap_converter_rate: 5
+ 
