--- a/src/hello/CMakeLists.txt
+++ b/src/hello/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(g29mt)
+project(hello)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,10 +8,12 @@ project(g29mt)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  roscpp
+  actionlib
+  actionlib_msgs
+  message_generation
+  message_runtime
   rospy
   std_msgs
-  tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -62,17 +64,17 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+  FILES
+  AddTwoInts.action
+)
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  actionlib_msgs#   std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -105,8 +107,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES g29mt
-#  CATKIN_DEPENDS roscpp rospy std_msgs tf
+#  LIBRARIES hello
+#  CATKIN_DEPENDS actionlib actionlib_msgs message_generation message_runtime rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -121,40 +123,9 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-
-add_executable(ps3_pulse src/ps3_pulse.cpp)
-
-target_link_libraries(ps3_pulse
-  ${catkin_LIBRARIES}
-)
-
-add_executable(ps3_pca9685 src/ps3_pca9685.cpp)
-
-target_link_libraries(ps3_pca9685
-  ${catkin_LIBRARIES}
-)
-
-add_executable(ge_force_pca9685_taikan src/ge_force_pca9685_taikan.cpp)
-
-target_link_libraries(ge_force_pca9685_taikan
-  ${catkin_LIBRARIES}
-)
-
-add_executable(ps3_twist_pub src/ps3_twist_pub.cpp)
-
-target_link_libraries(ps3_twist_pub
-  ${catkin_LIBRARIES}
-)
-
-add_executable(g29_twist_pub src/g29_twist_pub.cpp)
-
-target_link_libraries(g29_twist_pub
-  ${catkin_LIBRARIES}
-)
-
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/g29mt.cpp
+#   src/${PROJECT_NAME}/hello.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -165,7 +136,7 @@ target_link_libraries(g29_twist_pub
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/g29mt_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/hello_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -229,7 +200,7 @@ target_link_libraries(g29_twist_pub
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_g29mt.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_hello.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
