--- a/src/navigation2d_example/param/carlike/teb_local_planner_params.yaml
+++ b/src/navigation2d_example/param/carlike/teb_local_planner_params.yaml
@@ -1,6 +1,7 @@
 TebLocalPlannerROS:
 
  odom_topic: odom
+ map_frame: /odom
     
  # Trajectory
   
@@ -19,10 +20,10 @@ TebLocalPlannerROS:
     
  # Robot
          
- max_vel_x: 0.1
- max_vel_x_backwards: 0.1
+ max_vel_x: 0.05
+ max_vel_x_backwards: 0.05
  max_vel_y: 0.0
- max_vel_theta: 0.5 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
+ max_vel_theta: 0.4 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
  acc_lim_x: 0.01
  acc_lim_theta: 0.0
 
