--- a/src/urg_gmapping/param/amcl/global_costmap_params.yaml
+++ b/src/urg_gmapping/param/amcl/global_costmap_params.yaml
@@ -6,9 +6,10 @@ global_costmap:
   resolution: 0.05
   static_map: true
   rolling_window: false
- 
+  always_send_full_costmap: True
   transform_tolerance: 0.5
   cost_scaling_factor: 5.0
+  # inflation_radius: 0.1
 
   width: 5.0
   height: 5.0
