--- a/src/urg_gmapping/param/amcl/local_costmap_params.yaml
+++ b/src/urg_gmapping/param/amcl/local_costmap_params.yaml
@@ -1,16 +1,18 @@
 local_costmap:
-  global_frame: map
+  global_frame: odom
   robot_base_frame: base_link
   update_frequency: 5.0
   publish_frequency: 2.0
   static_map: false
+  use_sim_time: false
   rolling_window: true
+  always_send_full_costmap: True
   width: 5.5
   height: 5.5
   resolution: 0.1
   transform_tolerance: 0.5
-  
+
   plugins:
    - {name: static_layer,        type: "costmap_2d::StaticLayer"}
    - {name: obstacle_layer,      type: "costmap_2d::ObstacleLayer"}
-   - {name: inflation_layer,         type: "costmap_2d::InflationLayer"}
+   - {name: inflation_layer,     type: "costmap_2d::InflationLayer"}
