--- a/src/urg_gmapping/param/amcl/amcl_params.yaml
+++ b/src/urg_gmapping/param/amcl/amcl_params.yaml
@@ -1,7 +1,7 @@
 use_map_topic: true
 
 odom_frame_id: "odom"
-base_frame_id: "base_footprint"
+base_frame_id: "base_link"
 global_frame_id: "map"
 
 ## Publish scans from best pose at a max of 10 Hz
@@ -11,7 +11,7 @@ gui_publish_rate: 10.0
 laser_max_beams: 60
 laser_max_range: 12.0
 min_particles: 500
-max_particles: 2000
+max_particles: 5000
 kld_err: 0.05
 kld_z: 0.99
 odom_alpha1: 0.2
@@ -27,8 +27,8 @@ laser_sigma_hit: 0.2
 laser_lambda_short: 0.1
 laser_model_type: "likelihood_field" # "likelihood_field" or "beam"
 laser_likelihood_max_dist: 2.0
-update_min_d: 0.25
-update_min_a: 0.2
+update_min_d: 0.5
+update_min_a: 0.5
 
 resample_interval: 1
 
