--- a/src/urg_gmapping/param/amcl/global_costmap_params.yaml
+++ b/src/urg_gmapping/param/amcl/global_costmap_params.yaml
@@ -1,15 +1,15 @@
 global_costmap:
   global_frame: map
   robot_base_frame: base_link
-  update_frequency: 1.0
-  publish_frequency: 0.5
+  update_frequency: 10
+  publish_frequency: 10
   resolution: 0.05
   static_map: true
   rolling_window: false
   always_send_full_costmap: True
   transform_tolerance: 0.5
   cost_scaling_factor: 5.0
-  # inflation_radius: 0.1
+  inflation_radius: 0.01
 
   width: 5.0
   height: 5.0
