--- a/src/tamiya_teb_stage/cfg/carlike/costmap_common_params.yaml
+++ b/src/tamiya_teb_stage/cfg/carlike/costmap_common_params.yaml
@@ -4,26 +4,39 @@
 #footprint: [ [0.254, -0.0508], [0.1778, -0.0508], [0.1778, -0.1778], [-0.1905, -0.1778], [-0.254, 0], [-0.1905, 0.1778], [0.1778, 0.1778], [0.1778, 0.0508], [0.254, 0.0508] ]
 footprint: [ [-0.1,-0.125], [0.5,-0.125], [0.5,0.125], [-0.1,0.125] ]
 
+max_obstacle_height: 0.60  # assume something like an arm is mounted on top of the robot
+obstacle_range: 1.5
+raytrace_range: 2.0
+robot_radius: 0.24
+inflation_radius: 0.2
+
+# voxel map configuration; z-voxels 0 are filled by bumpers and 1 by laser scan (kinect)
+map_type: costmap
+# origin_z: 0.0
+# z_resolution: 0.2
+# z_voxels: 2
+# publish_voxel_map: false
+
+# footprint: [ [-0.1,-0.125], [0.5,-0.125], [0.5,0.125], [-0.1,0.125] ]
 
 transform_tolerance: 0.2
-map_type: costmap
 
 obstacle_layer:
  enabled: true
- obstacle_range: 3.0
- raytrace_range: 3.5
- inflation_radius: 0.2
+ obstacle_range: 1.0
+ raytrace_range: 1.5
+ inflation_radius: 0.01
  track_unknown_space: false
  combination_method: 1
 
- observation_sources: laser_scan_sensor
- laser_scan_sensor: {data_type: LaserScan, topic: scan, marking: true, clearing: true}
-
+ observation_sources: scan bump
+ scan: {data_type: LaserScan, topic: scan, marking: true, clearing: true, min_obstacle_height: 0.25, max_obstacle_height: 0.35}
+ bump: {data_type: PointCloud2, topic: mobile_base/sensors/bumper_pointcloud, marking: true, clearing: false, min_obstacle_height: 0.0, max_obstacle_height: 0.15}
 
 inflation_layer:
   enabled:              true
   cost_scaling_factor:  10.0  # exponential rate at which the obstacle cost drops off (default: 10)
-  inflation_radius:     0.5  # max. distance from an obstacle at which costs are incurred for planning paths.
+  inflation_radius:     0.01  # max. distance from an obstacle at which costs are incurred for planning paths.
 
 static_layer:
   enabled:              true
