--- a/src/tamiya_teb_stage/cfg/carlike/global_costmap_params.yaml
+++ b/src/tamiya_teb_stage/cfg/carlike/global_costmap_params.yaml
@@ -1,16 +1,20 @@
 global_costmap:
   global_frame: map
   robot_base_frame: base_link
-  update_frequency: 1.0
-  publish_frequency: 0.5
+  update_frequency: 10
+  publish_frequency: 10
+  resolution: 0.05
   static_map: true
- 
+  rolling_window: false
+  always_send_full_costmap: True
   transform_tolerance: 0.5
+  cost_scaling_factor: 5.0
+  inflation_radius: 0.01
+
+  width: 5.0
+  height: 5.0
+
   plugins:
     - {name: static_layer,            type: "costmap_2d::StaticLayer"}
     - {name: obstacle_layer,          type: "costmap_2d::VoxelLayer"}
     - {name: inflation_layer,         type: "costmap_2d::InflationLayer"}
-
-
-
-
