--- a/src/tamiya_teb_stage/cfg/carlike/local_costmap_params.yaml
+++ b/src/tamiya_teb_stage/cfg/carlike/local_costmap_params.yaml
@@ -1,15 +1,18 @@
 local_costmap:
-  global_frame: map
+  global_frame: odom
   robot_base_frame: base_link
-  update_frequency: 5.0
-  publish_frequency: 2.0
+  update_frequency: 10
+  publish_frequency: 10
   static_map: false
+  use_sim_time: false
   rolling_window: true
-  width: 5.5
-  height: 5.5
-  resolution: 0.1
+  always_send_full_costmap: True
+  width: 0.5
+  height: 0.5
+  resolution: 0.01
   transform_tolerance: 0.5
-  
+
   plugins:
    - {name: static_layer,        type: "costmap_2d::StaticLayer"}
    - {name: obstacle_layer,      type: "costmap_2d::ObstacleLayer"}
+   - {name: inflation_layer,     type: "costmap_2d::InflationLayer"}
