--- a/src/tamiya_teb_stage/cfg/carlike/teb_local_planner_params.yaml
+++ b/src/tamiya_teb_stage/cfg/carlike/teb_local_planner_params.yaml
@@ -1,6 +1,7 @@
 TebLocalPlannerROS:
 
  odom_topic: odom
+ map_frame: /odom
     
  # Trajectory
   
@@ -19,17 +20,17 @@ TebLocalPlannerROS:
     
  # Robot
          
- max_vel_x: 0.4
- max_vel_x_backwards: 0.2
+ max_vel_x: 0.05
+ max_vel_x_backwards: 0.05
  max_vel_y: 0.0
- max_vel_theta: 0.3 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
- acc_lim_x: 0.5
- acc_lim_theta: 0.5
+ max_vel_theta: 0.5 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
+ acc_lim_x: 0.01
+ acc_lim_theta: 0.0
 
  # ********************** Carlike robot parameters ********************
  min_turning_radius: 0.5        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
- wheelbase: 0.4                 # Wheelbase of our robot
- cmd_angle_instead_rotvel: True # stage simulator takes the angle instead of the rotvel as input (twist message)
+ wheelbase: 0.257                 # Wheelbase of our robot
+ cmd_angle_instead_rotvel: False # stage simulator takes the angle instead of the rotvel as input (twist message)
  # ********************************************************************
 
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
@@ -45,20 +46,20 @@ TebLocalPlannerROS:
 
  # GoalTolerance
     
- xy_goal_tolerance: 0.2
+ xy_goal_tolerance: 0.5
  yaw_goal_tolerance: 0.1
  free_goal_vel: False
  complete_global_plan: True
     
  # Obstacles
     
- min_obstacle_dist: 0.27 # This value must also include our robot's expansion, since footprint_model is set to "line".
- inflation_dist: 0.6
+ min_obstacle_dist: 0.01 # This value must also include our robot's expansion, since footprint_model is set to "line".
+ inflation_dist: 0.0
  include_costmap_obstacles: True
- costmap_obstacles_behind_robot_dist: 1.0
+ costmap_obstacles_behind_robot_dist: 0.02
  obstacle_poses_affected: 15
 
- dynamic_obstacle_inflation_dist: 0.6
+ dynamic_obstacle_inflation_dist: 0.01
  include_dynamic_obstacles: True 
 
  costmap_converter_plugin: ""
