--- a/src/slam_dungeon/maps/room.yaml
+++ b/src/slam_dungeon/maps/room.yaml
@@ -1,4 +1,4 @@
-image: /home/takahashi/catkin_ws/src/gbot_core/map/room.pgm
+image: 'room.pgm'
 resolution: 0.050000
 origin: [-6.054746, -5.800732, 0.000000]
 negate: 0
